--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -6,17 +6,19 @@ footer {
         margin: 10px 0;
     }
     .redes-container {
-        margin-top: 40px;
-        height: 50px;
-        padding: 5px;
+        height: auto;
+        margin-top: 15px;
+        padding: 5px 10px;
         line-height: 60px;
         list-style: none;
         list-style-type: none;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        color: black;
         flex-wrap: nowrap;
+    }
+    i{
+        color: black;
     }
     .redes-container a{
         font-size: 50px;
