--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #fefefe;
+  background-color: #1da0a2;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -19,22 +19,22 @@
     margin-right: 1.5rem; }
   .header .nav-menu a:hover {
     color: #ffecec;
-    background-color: #282828;
+    background-color: aqua;
     border: 2px solid #282828;
-    box-shadow: 5px 5px 15px;
+    box-shadow: 25px 15px 15px rgba(123, 224, 255, 0.658);
     padding: .25rem .75rem;
-    border-radius: .2rem;
-    transition: .5s; }
+    border-radius: 15px;
+    transition: all .2s; }
   .header i {
     font-size: 30px; }
   .header i, .header #check {
     display: none; }
-  @media (max-width: 1026px) {
+  @media (max-width: 1150px) {
     .header .checkbtn {
       display: block;
       cursor: pointer; }
-    .header .logo-header {
-      width: 150px; }
+    .header .logo-header img {
+      width: 250px; }
     .header i {
       display: block;
       position: fixed;
@@ -46,11 +46,12 @@
       position: fixed;
       top: 70px;
       left: -100%;
-      background-color: #222;
+      border: 1px solid black;
       width: 100%;
-      height: 100hv;
+      height: 60vh;
       right: 0;
-      background: transparent; }
+      background-color: #1da0a2;
+      margin-top: 10px; }
     .header .nav-menu ul li {
       padding: 2rem;
       display: flex;
@@ -89,23 +90,69 @@ footer {
     font-size: 50px; }
 
 .main-index .main-space {
-  margin-bottom: 300px; }
+  margin-bottom: 300px;
+  margin-top: 500px; }
 
 .nosotros {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 5px 15px;
+  padding: 15px 15px;
   border: 2px solid #31cbfa;
-  margin: auto;
   width: 50%;
-  flex-wrap: wrap;
+  height: 500px;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
   border-radius: 15px;
-  box-shadow: 20px 15px 35px; }
-  .nosotroshover {
-    width: 60%;
-    transition: 2s;
-    background-color: #31cbfa; }
-  .nosotros .h1 {
-    color: #31cbfa; }
+  box-shadow: 20px 15px 35px aqua;
+  background-image: url(/images/nosotros.jpg);
+  font-size: 5px;
+  flex-wrap: wrap; }
+  .nosotros .nosotros-title {
+    padding: 15px;
+    color: white; }
+  .nosotros p {
+    margin-top: 15px;
+    text-align: center;
+    color: white; }
+  .nosotros:hover {
+    width: 80%;
+    height: 800px;
+    transition: 5s;
+    background-image: url(/images/40ea801b-45eb-4d34-a17c-106e867d0ab0.jpg);
+    font-size: 35px; }
+
+@media (max-width: 500px) {
+  .nosotros p {
+    font-size: 15px; } }
+
+.grid-nosotros {
+  padding: 5px 10px;
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 200px;
+  grid-gap: 15px; }
+  .grid-nosotros .grid-nosotros-card {
+    padding: 10px;
+    border: 1px solid black;
+    background-color: cadetblue;
+    font-size: 20px;
+    border-radius: 1em; }
+
+@media (max-width: 1000px) {
+  .grid-nosotros {
+    padding: 5px 10px;
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 200px 200px 200px 200px;
+    grid-gap: 10px; }
+  .grid-nosotros-card {
+    padding: 10px;
+    border: 1px solid black;
+    background-color: cadetblue;
+    font-size: 10px;
+    border-radius: 1em; } }
