--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,5 +1,5 @@
 .header{
-    background-color: rgb(254, 254, 254);
+    background-color: rgb(29, 160, 162);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,12 +24,12 @@
     }
     .nav-menu a:hover {
         color: rgb(255, 236, 236);
-        background-color: rgb(40, 40, 40);
+        background-color: aqua;
         border: 2px solid rgb(40, 40, 40);
-        box-shadow: 5px 5px 15px;
+        box-shadow: 25px 15px 15px rgba(123, 224, 255, 0.658);
         padding: .25rem .75rem;
-        border-radius: .2rem;
-        transition: .5s;
+        border-radius: 15px;
+        transition: all .2s;
     }    
     i{
         font-size: 30px;
@@ -38,13 +38,13 @@
         display: none;
     }
 
-    @media (max-width: 1026px) {
+    @media (max-width: 1150px) {
         .checkbtn{
             display: block;
             cursor: pointer;
         }
-        .logo-header{
-            width: 150px;
+        .logo-header img{
+            width: 250px;
         }
         i{
             display: block;
@@ -58,11 +58,12 @@
             position: fixed;
             top: 70px;
             left: -100%;
-            background-color: #222;
+            border: 1px solid black;
             width: 100%;
-            height: 100hv;
+            height: 60vh;
             right: 0;
-            background: transparent;
+            background-color: rgb(29, 160, 162);
+            margin-top: 10px;
             }
         .nav-menu ul li{
             padding: 2rem;
