--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -3,6 +3,7 @@ $primarycolor:rgb(49, 203, 250);
 .main-index {
     .main-space {
         margin-bottom: 300px;
+        margin-top: 500px;
     }
 }
 
@@ -17,19 +18,78 @@ $primarycolor:rgb(49, 203, 250);
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 5px 15px;
+    padding: 15px 15px;
     border: 2px solid $primarycolor;
-    margin: auto;
     width: 50%;
-    flex-wrap: wrap;
+    height: 500px;
+    margin: auto;
+    margin-top: 25px;
+    margin-bottom: 25px;
     border-radius: 15px;
-    box-shadow: 20px 15px 35px;
-    &hover{
-    width: 60%;
-    transition: 2s;
-    background-color: $primarycolor;
+    box-shadow: 20px 15px 35px aqua;
+    background-image: url(/images/nosotros.jpg);
+    font-size: 5px;
+    flex-wrap: wrap;
+    
+    .nosotros-title{
+        padding: 15px;
+        color: rgb(255, 255, 255);
+        }
+        p{
+            margin-top: 15px;
+            text-align: center;
+            color: rgb(255, 255, 255);
+        }
+    &:hover
+        {
+        width: 80%;
+        height: 800px;
+        transition: 5s;
+        background-image: url(/images/40ea801b-45eb-4d34-a17c-106e867d0ab0.jpg);
+        font-size: 35px;
+        }
+}
+
+@media (max-width: 500px){
+    .nosotros{
+        p{
+            font-size: 15px;
+        }
     }
-    .h1 {
-        color: $primarycolor;
+}
+
+// grid de Nosotros
+
+.grid-nosotros{
+    padding: 5px 10px;
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 200px;
+    grid-gap: 15px;
+    .grid-nosotros-card{
+        padding: 10px;
+        border: 1px solid black;
+        background-color: cadetblue;
+        font-size: 20px;
+        border-radius: 1em;
     }
+}
+
+@media (max-width: 1000px){
+    .grid-nosotros{
+        padding: 5px 10px;
+        margin-top: 50px;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 200px 200px 200px 200px;
+        grid-gap: 10px;
+    }
+        .grid-nosotros-card{
+            padding: 10px;
+            border: 1px solid black;
+            background-color: cadetblue;
+            font-size: 10px;
+            border-radius: 1em;
+        }
 }
