--- a/css/style.css
+++ b/css/style.css
@@ -96,9 +96,8 @@ footer {
 .nosotros {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 15px 15px;
+  justify-content: space-between;
+  padding: 20px 10px;
   border: 2px solid #31cbfa;
   width: 50%;
   height: 500px;
@@ -107,26 +106,32 @@ footer {
   margin-bottom: 25px;
   border-radius: 15px;
   box-shadow: 20px 15px 35px aqua;
-  background-image: url(/images/nosotros.jpg);
-  font-size: 5px;
-  flex-wrap: wrap; }
-  .nosotros .nosotros-title {
-    padding: 15px;
-    color: white; }
+  background-image: url(../images/nosotros.jpg);
+  font-size: 25px;
+  flex-wrap: nowrap;
+  color: black; }
+  .nosotros h1 {
+    text-align: center;
+    padding: 50px;
+    color: #f1f1f1; }
   .nosotros p {
-    margin-top: 15px;
+    margin-bottom: 40px;
     text-align: center;
     color: white; }
   .nosotros:hover {
     width: 80%;
     height: 800px;
     transition: 5s;
-    background-image: url(/images/40ea801b-45eb-4d34-a17c-106e867d0ab0.jpg);
+    background-image: url(../images/40ea801b-45eb-4d34-a17c-106e867d0ab0.jpg);
     font-size: 35px; }
 
-@media (max-width: 500px) {
-  .nosotros p {
-    font-size: 15px; } }
+@media (max-width: 600px) {
+  .nosotros {
+    height: 800px; }
+    .nosotros p {
+      margin: auto;
+      text-align: center;
+      font-size: 12px; } }
 
 .grid-nosotros {
   padding: 5px 10px;
@@ -140,9 +145,12 @@ footer {
     border: 1px solid black;
     background-color: cadetblue;
     font-size: 20px;
-    border-radius: 1em; }
+    border-radius: 1em;
+    align-items: center; }
+    .grid-nosotros .grid-nosotros-card p {
+      font-size: 20px; }
 
-@media (max-width: 1000px) {
+@media (max-width: 1250px) {
   .grid-nosotros {
     padding: 5px 10px;
     margin-top: 50px;
@@ -156,3 +164,13 @@ footer {
     background-color: cadetblue;
     font-size: 10px;
     border-radius: 1em; } }
+
+@media (max-width: 501px) {
+  .grid-nosotros p {
+    margin: auto;
+    padding: auto;
+    font-size: 6px;
+    display: flex;
+    flex-wrap: wrap; }
+  .grid-nosotros-card {
+    text-align: center; } }
