--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,5 +1,10 @@
-footer {
-    background-color: rgb(29, 160, 162);
+@import "../variables/variables";
+@import "../sass2/extend";
+@import "../sass2/mixins";
+
+
+.footer{
+    @extend .header-footer;
     
     p{
         font-size: 20px;
@@ -12,9 +17,8 @@ footer {
         line-height: 60px;
         list-style: none;
         list-style-type: none;
-        display: flex;
+        @include flexibilizar-espacio;
         flex-direction: row;
-        justify-content: space-between;
         flex-wrap: nowrap;
     }
     i{
@@ -23,5 +27,7 @@ footer {
     .redes-container a{
         font-size: 50px;
     }
-    
+    .redes-container a{
+        color: rgb(235, 232, 232);
+    }
 }
