--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,14 +1,14 @@
-.header{
-    background-color: rgb(29, 160, 162);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: .5rem 2rem;
+@import "../variables/variables";
+@import "../sass2/extend";
+@import "../sass2/mixins";
 
+
+.header{
+    @extend .header-footer;
+    @include flexibilizar-espacio;
+    padding: .5rem 2rem;
     a{
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 25px;
-        text-decoration: none;
+        @include fuentes;
         color: #222;
         text-shadow: 5px 5px 15px;
     }
