--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,17 @@
 @import "partials/header";
 @import "partials/body";
 @import "partials/footer";
-@import "partials/main" 
+@import "partials/main";
+@import "variables/variables";
+@import "./sass2/condicionales";
+@import "./sass2/extend";
+@import "./sass2/maps";
+@import "./sass2/operaciones";
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+}
